--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+.pnp*
 
-# dependencies
-/node_modules
+# Build outputs
+.next/
+dist/
+build/
+out/
+.turbo/
 
-# next.js
-/.next/
-/out/
+# Env files
+.env
+.env.*
+!.env.example
 
-# production
-/build
+# OS / Editor
+.DS_Store
+Thumbs.db
+*.log
+.vscode/
+.idea/
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Coverage
+coverage/
 
-# env files
-.env*
+# Misc
+.vercel/
+.netlify/
+.swp
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Local caches
+**/.cache/
