--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,107 @@
 # Dependencies
 node_modules/
-.pnp*
+.pnp
+.pnp.js
 
-# Build outputs
-.next/
-dist/
-build/
-out/
-.turbo/
+# Testing
+/coverage
 
-# Env files
-.env
-.env.*
-!.env.example
+# Next.js
+/.next/
+/out/
 
-# OS / Editor
-.DS_Store
-Thumbs.db
-*.log
-.vscode/
-.idea/
-
-# Coverage
-coverage/
+# Production
+/build
 
 # Misc
-.vercel/
-.netlify/
-.swp
+.DS_Store
+*.pem
 
-# Local caches
-**/.cache/
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+.env
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+Thumbs.db
+
+# Logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
