--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "next": "^15.5.0",
     "next-themes": "latest",
     "openai": "^5.15.0",
-    "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.54",
     "react": "^19",
     "react-day-picker": "9.8.0",
@@ -66,6 +65,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
     "vaul": "^0.9.9",
+    "xlsx": "^0.18.5",
     "zod": "3.25.67"
   },
   "devDependencies": {
@@ -74,6 +74,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.179.0",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "15.5.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
