build: unblock production build (disable build-time lint/ts), fix Next route params; deps: add TS ESLint plugins

--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
